--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,15 @@
 			<version>2.9.4</version>
 		</dependency>
 		<dependency>
+			<groupId>com.fazecast</groupId>
+			<artifactId>jSerialComm</artifactId>
+			<version>2.9.3</version>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
 			<groupId>com.github.kurbatov</groupId>
 			<artifactId>firmata4j</artifactId>
-			<version>2.3.8</version>
+			<version>2.3.9-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	<build>
