--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,12 @@
 			<artifactId>vaadin-boot</artifactId>
 			<version>10.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fazecast</groupId>
+			<artifactId>jSerialComm</artifactId>
+			<version>2.9.3</version>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
