--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>app.owlcms.jfirmata</groupId>
-	<artifactId>startdevice</artifactId>
+	<artifactId>owlcms-firmata</artifactId>
 	<version>0.8.0</version>
 
 	<properties>
@@ -93,12 +93,6 @@
 			<artifactId>vaadin-boot</artifactId>
 			<version>10.3</version>
 		</dependency>
-		<dependency>
-			<groupId>com.fazecast</groupId>
-			<artifactId>jSerialComm</artifactId>
-			<version>2.9.3</version>
-			<optional>true</optional>
-		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -145,6 +139,9 @@
 							</filters>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>app.owlcms.firmata.ui.Main</mainClass>
+								</transformer>
 							</transformers>
 						</configuration>
 					</execution>
