--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 		<dependency>
 			<groupId>com.github.kurbatov</groupId>
 			<artifactId>firmata4j</artifactId>
-			<version>2.3.9-SNAPSHOT</version>
+			<version>2.3.9-owlcms01</version>
 			<exclusions>
 				<exclusion>
 					<groupId>io.github.java-native</groupId>
