--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,14 @@
 			<artifactId>vaadin-boot</artifactId>
 			<version>10.3</version>
 		</dependency>
+
+		<!-- testing -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.1</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
