--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>app.owlcms.jfirmata</groupId>
 	<artifactId>owlcms-firmata</artifactId>
-	<version>1.3.0-rc00</version>
+	<version>1.3.1</version>
 
 	<properties>
 		<windowsVersion>${env.VERSION}</windowsVersion>
