--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>app.owlcms.jfirmata</groupId>
 	<artifactId>owlcms-firmata</artifactId>
-	<version>1.3.5</version>
+	<version>1.3.6</version>
 
 	<properties>
 		<windowsVersion>${env.VERSION}</windowsVersion>
@@ -91,13 +91,22 @@
 			<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
 			<version>1.2.5</version>
 		</dependency>
-		<!-- Vaadin Boot which runs Vaadin apps from main() function easily:
-		https://github.com/mvysny/vaadin-boot -->
+		<!--
+		https://mvnrepository.com/artifact/org.eclipse.jetty.ee10.websocket/jetty-ee10-websocket-jakarta-server -->
 		<dependency>
-			<groupId>com.github.mvysny.vaadin-boot</groupId>
-			<artifactId>vaadin-boot</artifactId>
-			<version>11.3</version>
+			<groupId>org.eclipse.jetty.ee10.websocket</groupId>
+			<artifactId>jetty-ee10-websocket-jakarta-server</artifactId>
+			<version>12.0.4</version>
 		</dependency>
+
+		<!--
+		https://mvnrepository.com/artifact/org.eclipse.jetty.ee10/jetty-ee10-annotations -->
+		<dependency>
+			<groupId>org.eclipse.jetty.ee10</groupId>
+			<artifactId>jetty-ee10-annotations</artifactId>
+			<version>12.0.4</version>
+		</dependency>
+
 
 		<!-- testing -->
 		<dependency>
