--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>app.owlcms.jfirmata</groupId>
 	<artifactId>owlcms-firmata</artifactId>
-	<version>1.3.6</version>
+	<version>2.0.0-alpha01</version>
 
 	<properties>
 		<windowsVersion>${env.VERSION}</windowsVersion>
