--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>app.owlcms.jfirmata</groupId>
 	<artifactId>owlcms-firmata</artifactId>
-	<version>2.0.1</version>
+	<version>2.0.2</version>
 
 	<properties>
 		<windowsVersion>${env.VERSION}</windowsVersion>
@@ -12,6 +12,7 @@
 		<vaadin.version>24.3.3</vaadin.version>
 		<slf4j.version>2.0.7</slf4j.version>
 		<logback.version>1.4.14</logback.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencyManagement>
@@ -131,6 +132,9 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-resources-plugin</artifactId>
 					<version>3.3.1</version>
+					<configuration>
+						<propertiesEncoding>UTF-8</propertiesEncoding>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
