--- a/src/main/resources-filtered/build.properties
+++ b/src/main/resources-filtered/build.properties
@@ -2,3 +2,4 @@ version=${project.version}
 windowsVersion=${windowsVersion}
 buildTimestamp=${timestamp}
 buildZone=America/Montreal
+vaadinVersion=${vaadin.version}
